bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: not found: value D
var x=D
      ^